crates/uitest/fixtures/ty_check/payable_on_for_stmt.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_for_stmt.fe
---
error[12-0001]: unsupported `#[payable]` attribute on for loop
  ┌─ payable_on_for_stmt.fe:2:5
  │
2 │     #[payable]
  │     ^^^^^^^^^^ `#[payable]` is only supported on init blocks and recv arms
